# auxilia

./: .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  README.md  auxilia.vcxitems  auxilia.vcxitems.filters
cmake/: folders.cmake  install.cmake  prelude.cmake
demo/: CMakeLists.txt  chatroom.cpp  demo.cpp  demo1.cpp  demo2.cpp  demo3.cpp  flight.cpp  http_server.cpp  program.options.demo.cpp  udp_chat.cpp
include/accat/auxilia/: auxfwd.hpp  auxilia.hpp  defines.hpp
include/accat/auxilia/base/: config.hpp  format.hpp  macros.hpp
include/accat/auxilia/base/internal/: variadic-inl.h
include/accat/auxilia/container/: Generator.hpp  Trie.hpp  Variant.hpp  bitset.hpp  chars.hpp  flat_map.hpp
include/accat/auxilia/details/: BNFLexer.hpp  EBNF.hpp  Generator.hpp  Grammar.hpp  Monostate.hpp  Property.hpp  Span.hpp  Status.hpp  StatusOr.hpp  Trie.hpp  Variant.hpp  automata.hpp  automaton.hpp  bit.hpp  bitset.hpp  chars.hpp  chars_helper.hpp  config.hpp  file_reader.hpp  format.hpp  id.hpp  includes-inl.hpp  lexing.hpp  macros.hpp  memory.hpp  program_options.hpp  random.hpp  type_traits.hpp  variadic-inl.h  views.hpp
include/accat/auxilia/memory/: memory.hpp
include/accat/auxilia/meta/: Monostate.hpp  container_traits.hpp  type_traits.hpp
include/accat/auxilia/ranges/: views.hpp
include/accat/auxilia/status/: Status.hpp  StatusOr.hpp
include/accat/auxilia/synchronization/: id.hpp
include/accat/auxilia/utility/: Noise.hpp  Property.hpp  bit.hpp  numbers.hpp  program_options.hpp  random.hpp
include/auxilia/: auxfwd.hpp  auxilia.hpp  defines.hpp  net.hpp
include/auxilia/base/: config.hpp  format.hpp  macros.hpp
include/auxilia/base/internal/: variadic-inl.h
include/auxilia/container/: Generator.hpp  Trie.hpp  Variant.hpp  bitset.hpp  chars.hpp  flat_map.hpp
include/auxilia/container/concurrent/: vector.hpp
include/auxilia/container/concurrent/patterns/: functional.hpp  proxy.hpp
include/auxilia/memory/: memory.hpp
include/auxilia/meta/: Monostate.hpp  container_traits.hpp  type_traits.hpp
include/auxilia/networking/: awaitable.hpp  endpoint.hpp  io_context.hpp  ip.hpp  net.hpp  os.hpp  protocol.hpp  socket.hpp  tcp.hpp
include/auxilia/networking/os/: basic.hpp
include/auxilia/networking/os/linux/: epoll.hpp  error.hpp  io_context.hpp  linux.hpp
include/auxilia/networking/os/windows/: error.hpp  io_context.hpp  iocp.hpp  windows.hpp
include/auxilia/ranges/: views.hpp
include/auxilia/status/: Status.hpp  StatusOr.hpp
include/auxilia/synchronization/: id.hpp
include/auxilia/utility/: Noise.hpp  Property.hpp  bit.hpp  numbers.hpp  program_options.hpp  random.hpp
packaging/: auxiliaConfig.cmake.in  pkgconfig.pc.in
packaging/vcpkg/ports/auxilia/: portfile.cmake  vcpkg.json
projects/: CMakeLists.txt  README.md
projects/cp/: CMakeLists.txt  README.md  cp.cpp
projects/cp/demo/: Automaton.demo.cpp  Grammar.demo.cpp  sysY.g4  sysY.grammar.inl
projects/cp/include/: Automaton.hpp  DFA.hpp  Grammar.hpp  Lexing.hpp  NFA.hpp
projects/cp/src/: Automaton.cpp  DFA.cpp  Grammar.cpp  Lexing.cpp  NFA.cpp  Piece.cpp
projects/cp/tests/: Automata.test.cpp  Grammar.partial.test.cpp  Grammar.test.cpp  test.env.inl.hpp
projects/np/: CMakeLists.txt  chatroom.cpp  http_server.cpp  oneshot.cpp
tests/: Automata.test.cpp  Bitset.test.cpp  CMakeLists.txt  Chars.test.cpp  EBNF.test.cpp  Grammar.test.cpp  Options.test.cpp  Status.test.cpp  StatusOr.test.cpp  Variant.test.cpp  test.env.inl.hpp
