cc_library(
    name = "auxilia",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
    ]),
    copts = [
        "/std:c++latest",
        "/Zc:preprocessor",
        "/Zc:__cplusplus",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@fmt",
        "@spdlog",
    ],
)
