cc_library(
    name = "auxilia",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
    ]),
    copts = [
        "/std:c++latest",
        "/Zc:preprocessor",
        "/Zc:__cplusplus",
        "/wd4068",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@fmt",
        "@spdlog",
    ],
)
